# SavorySense

./: README.md
backend/: pyproject.toml
backend/api/: auth_routes.py  protected_routes.py  recipe_routes.py
backend/app/: main.py
backend/core/: scraper.py  security.py
backend/tests/: tests.txt
